# taskd-client-py

./: .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  Pipfile  README.md  post_test.sh  pre_test.sh  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: dependabot.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: api.rst  changes.rst  conf.py  index.rst  usage.rst
taskc/: __init__.py  connect.py  errors.py  simple.py  simple_test.py  test_simple.py  test_transaction.py  transaction.py  transaction_test.py
taskc/fixture/: .taskrc  taskdresponse.txt
taskc/fixture/pki/: ca.cert.pem  ca.key.pem  ca.template  client.cert.pem  client.key.pem  client.template  crl.template  server.cert.pem  server.crl.pem  server.key.pem  server.template  vars
