[tool.poetry]
name = "taskc"
version = "0.3.0"
description = "A python client library for taskwarrior's taskd"
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]
license = "LGPL-3.0+"
repository = "https://github.com/jrabbit/taskd-client-py"
documentation = "https://taskd-client-py.readthedocs.io/en/latest/"
classifiers = ["Development Status :: 4 - Beta",
             "Intended Audience :: Developers",
             "Topic :: Software Development :: Libraries :: Python Modules",
             "Topic :: Internet"
             ]
keywords = ["taskwarrior", "taskd", "client", "todo"]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "*"
six = "*"

[tool.poetry.dev-dependencies]
docker = "*"
coverage = "*"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
